tests/sksl/errors/BadModifiers.dsl.glsl
### Compilation failed:

error: 'uniform' is not permitted here
error: 'flat' is not permitted here
error: 'noperspective' is not permitted here
error: 'sk_has_side_effects' is not permitted here
error: 'inline' is not permitted here
error: 'noinline' is not permitted here

error: 'in uniform' variables only permitted within fragment processors
error: 'sk_has_side_effects' is not permitted here
error: 'inline' is not permitted here
error: 'noinline' is not permitted here
error: 'const' variables must be initialized

error: 'in uniform' variables only permitted within fragment processors
error: 'sk_has_side_effects' is not permitted here
error: 'inline' is not permitted here
error: 'noinline' is not permitted here
error: 'const' variables must be initialized

3 errors
